tests/spec/build/snapshots/go_exported_impl_method_kept_even_when_never_called.snap
---
source: tests/spec/build/mod.rs
---
// === main.go ===
package main

type Widget struct {
	name string
}

func (w Widget) MarshalJSON() string {
	return "{\"name\":\"" + w.name + "\"}"
}

func main() {
	_ = Widget{name: "x"}
}
