tests/spec/build/snapshots/go_exported_impl_method_kept_when_only_reached_via_error_interface.snap
---
source: tests/spec/build/mod.rs
---
// === main.go ===
package main

import "fmt"

func main() {
	e := MyErr{msg: "boom"}
	fmt.Println(e)
}

type MyErr struct {
	msg string
}

func (m MyErr) Error() string {
	return "ERR: " + m.msg
}
