tests/spec/build/snapshots/go_exported_impl_method_kept_when_only_reached_via_fmt_stringer.snap
---
source: tests/spec/build/mod.rs
---
// === main.go ===
package main

import "fmt"

func main() {
	a := A{a: "text"}
	fmt.Println(a)
}

type A struct {
	a string
}

func (a A) String() string {
	return a.a + "asdf"
}
