tests/spec/build/snapshots/go_exported_impl_method_kept_when_only_reached_via_go_stringer.snap
---
source: tests/spec/build/mod.rs
---
// === main.go ===
package main

import "fmt"

func main() {
	a := A{a: "text"}
	fmt.Printf("%#v\n", a)
}

type A struct {
	a string
}

func (a A) GoString() string {
	return a.a + "asdf"
}
