tests/spec/build/snapshots/go_function_value_result_wrapping.snap
---
source: tests/spec/build/mod.rs
---
// === main.go ===
package main

import (
	"fmt"
	"strconv"
)

func main() {
	parse := strconv.Atoi
	if n, e := parse("42"); e == nil {
		fmt.Printf("parsed: %d\n", n)
	} else {
		msg := e.Error()
		fmt.Println(msg)
	}
}
