tests/spec/build/snapshots/go_map_nullable_value_unwrap_preserves_none_keys.snap
---
source: tests/spec/build/mod.rs
---
// === main.go ===
package main

import (
	"fmt"
	lisette "github.com/ivov/lisette/prelude"
	"go/ast"
)

func main() {
	obj := ast.Object{
		Kind: ast.Bad,
		Name: "x",
		Decl: lisette.MakeOptionNone[any](),
		Data: lisette.MakeOptionNone[any](),
		Type: lisette.MakeOptionNone[any](),
	}
	objects := make(map[string]lisette.Option[*ast.Object])
	objects["present"] = lisette.MakeOptionSome(&obj)
	objects["absent"] = lisette.MakeOptionNone[*ast.Object]()
	unwrapped := make(map[string]*ast.Object, len(objects))
	for i, v := range objects {
		if v.Tag == lisette.OptionSome {
			unwrapped[i] = v.SomeVal
		} else {
			unwrapped[i] = nil
		}
	}
	scope := ast.Scope{
		Outer:   nil,
		Objects: unwrapped,
	}
	raw := scope.Objects
	var option lisette.Option[map[string]lisette.Option[*ast.Object]]
	if raw != nil {
		wrapped := make(map[string]lisette.Option[*ast.Object], len(raw))
		for i_1, v_1 := range raw {
			if v_1 != nil {
				wrapped[i_1] = lisette.MakeOptionSome[*ast.Object](v_1)
			} else {
				wrapped[i_1] = lisette.MakeOptionNone[*ast.Object]()
			}
		}
		option = lisette.MakeOptionSome[map[string]lisette.Option[*ast.Object]](wrapped)
	} else {
		option = lisette.MakeOptionNone[map[string]lisette.Option[*ast.Object]]()
	}
	fmt.Print(option)
}
