tests/spec/build/snapshots/go_method_option_comma_ok_wrapped.snap
---
source: tests/spec/build/mod.rs
---
// === main.go ===
package main

import (
	"context"
	"fmt"
	"time"
)

func main() {
	ctx := context.Background()
	_, ok := ctx.Deadline()
	fmt.Print(ok)
}
