tests/spec/build/snapshots/go_method_single_pointer_option_wrapped.snap
---
source: tests/spec/build/mod.rs
---
// === main.go ===
package main

import (
	"container/list"
	"fmt"
	lisette "github.com/ivov/lisette/prelude"
)

func main() {
	l := list.New()
	l.PushBack(42)
	raw := l.Front()
	front := lisette.OptionFromNilable[*list.Element](raw, raw == nil)
	fmt.Print(front.IsSome())
}
