tests/spec/build/snapshots/go_mut_param_accepted_with_let_mut.snap
---
source: tests/spec/build/mod.rs
---
// === main.go ===
package main

import "sort"

func main() {
	nums := []int{3, 1, 2}
	sort.Ints(nums)
}
