tests/spec/build/snapshots/go_mut_param_selective_only_dst.snap
---
source: tests/spec/build/mod.rs
---
// === main.go ===
package main

import "encoding/hex"

func main() {
	dst := []uint8{0, 0, 0, 0, 0, 0, 0, 0, 0, 0}
	src := []uint8{0xDE, 0xAD}
	hex.Encode(dst, src)
}
