tests/spec/build/snapshots/go_non_mutating_slices_helpers_accept_immutable_arg.snap
---
source: tests/spec/build/mod.rs
---
// === main.go ===
package main

import (
	"fmt"
	"slices"
)

func main() {
	nums := []int{3, 1, 2}
	copied := slices.Clone(nums)
	clipped := slices.Clip(nums)
	fmt.Println(copied, clipped)
}
